2009-06-15  Tyler Romoe  <tylerromeo@gmail.com>

	*app/models.py (Database.getLine): Added statement to handle the 'id' identifier (not stored in data).
	*app/models.py (Auth.makeUser): Added password encryption to be compatible with the useradd command.
	*app/models.py (Request.updateFromDatabase): Fixed database update when other keys are given.

	*app/models.py (Request.__init__): Stored auth variable within class.
	*app/models.py (Request.newInstance): Fixed parameters passed to new Request objects.

	User account creation now works. Account shell is operational.

2009-06-09  Tyler Romeo  <tylerromeo@gmail.com>

	Added new Auth model to check existing usernames for Admin Panel.
	*app/controllers.py (AdminPanel.execute): Added code to authenticate user.

	*app/models.py (Request): Changed userinfo variable to __userinfo.

2009-06-07  Tyler Romeo  <tylerromeo@gmail.com>

	*acctshell.py: Fixed loop to exit admin menu correctly.
	Request creation and deletion work correctly. Admin menu being tested.

	*app/controllers.py (AdminPanel.handleRequest): Fixed paramters passed to Request object.
	*app/models.py (Request.approve): Removed unnecessary option on useradd command.

	*app/views/AdminPanel.py (AdminPanel_MainMenu): Fixed paramters problem with views.
	*app/views/AdminPanel.py (Request_List): Added definition for key variable.
	Listing requests from database works correctly.	

2009-05-20  Tyler Romeo  <tylerromeo@gmail.com>

	*acctshell.py: Updated startup script with new functionality.
	Added AdminPanel views and controllers (no password protection yet!).

	*app/views/AccountShell.py: Changed function name to avoid collisions.
	*app/controllers.py (AccountShell.getMenuChoice): Remove useless function.

	*app/models.py (Request.checkPassword): Added check for error if passowrd is blank.
	*app/views/AccountShell.py: Added ClearScreen() function for all views.

2009-05-07  Tyler Romeo  <tylerromeo@gmail.com>
