@@ -8,6 +8,7 @@ auth = app.models.Auth(config, database)
 request = app.models.Request(config, database, auth)
 controller1 = app.controllers.AccountShell(config, database, request)
 controller2 = app.controllers.AdminPanel(config, database, auth, request)
+controller3 = app.controllers.SuperuserPanel(config, database, auth, request)
 
 database.updateFromFile()
 
@@ -18,7 +19,14 @@ while menustatus:
 		database.updateToFile()
 	elif menustatus == 1:
 		adminstatus = 2
-		while adminstatus == 2:
-			adminstatus = controller2.execute()
-			database.updateToFile()
+		while adminstatus:
+			if adminstatus == 2:
+				adminstatus = controller2.execute()
+				database.updateToFile()
+			elif adminstatus == 1:
+				superuserstatus = 2
+				while superuserstatus:
+					superuserstatus = controller3.execute()
+					database.updateToFile()
+				adminstatus = 2
 		menustatus = 2
