@@ -1,6 +1,3 @@
 import controllers
 import models
 import views
-import views.AccountShell
-import views.AdminPanel
-import views.SuperuserPanel
