@@ -1,4 +1,11 @@
-2009-06-15  Tyler Romoe  <tylerromeo@gmail.com>
+2009-06-26  Tyler Romeo  <tylerromeo@gmail.com>
+
+	Created Superuser Panel views and controller. Integration of Superuser tools not yet finished.
+	Merged view functions into one file for easier integration.
+
+	*app/models.py (Auth.authenticate): Fixed variable name for when username is supplied.
+
+2009-06-15  Tyler Romeo  <tylerromeo@gmail.com>
 
 	*app/models.py (Database.getLine): Added statement to handle the 'id' identifier (not stored in data).
 	*app/models.py (Auth.makeUser): Added password encryption to be compatible with the useradd command.
